tdf#116836 Don't move objects out of cell when shrinking cell

Change-Id: I8185f3501eb17a62ef4f55b2c8bb2d70f1895365